--- a/package.json
+++ b/package.json
@@ -21,11 +21,12 @@
     "node": ">= 0.8.0"
   },
   "dependencies": {
-    "camelton": "git://github.com/tuunanen/camelton.git#v0.3.0"
+    "camelton": "^1.0.0"
   },
   "devDependencies": {
     "grunt": "~0.4.5",
     "grunt-contrib-clean": "^0.5.0",
+    "grunt-contrib-copy": "^0.7.0",
     "grunt-contrib-jshint": "^0.9.2",
     "grunt-contrib-nodeunit": "^0.3.3",
     "grunt-jscs": "^1.0.0",
