--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "version": "0.0.0",
   "homepage": "https://github.com/tuunanen/grunt-camelton",
   "author": "tuunanen",
+  "scripts": {
+    "test": "./node_modules/.bin/grunt test"
+  },
   "repository": {
     "type": "git",
     "url": "git://github.com/tuunanen/grunt-camelton.git"
@@ -25,6 +28,7 @@
   },
   "devDependencies": {
     "grunt": "~0.4.5",
+    "grunt-cli": "^0.1.13",
     "grunt-contrib-clean": "^0.5.0",
     "grunt-contrib-copy": "^0.7.0",
     "grunt-contrib-jshint": "^0.9.2",
